# habit-tracker

./: .gitignore  analysis.py  analysis_old.py  cli.py  conftest.py  fixtures.py  habit_manager.py  main.py  models.py  pyproject.toml  readme.md  requirements.txt  setup.py  test_analysis.py  test_habit_manager.py  todo.md
src/habit/: analysis.py  cli.py  fixtures.py  habit_manager.py  models.py
src/habit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_analysis.py  test_habit_manager.py
