[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "habit"
version = "0.1.0"
description = "A habit tracker project"
requires-python = ">=3.8"

authors = [
  { name="Marouane TORY", email="marouane.tory@iu-study.org" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.0,<9.0",
    "SQLAlchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]


[project.scripts]
habit = "habit.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]